# mininix

./: NOTES.md  cabal.project  flake.nix  mininix.cabal
app/: Main.hs
mininix-buildlang/: mininix-buildlang.cabal
mininix-buildlang/app/: Main.hs
mininix-buildlang/src/: Check.hs  Eval.hs  Expr.hs  Parser.hs  Syntax.hs  Type.hs  Value.hs
mininix-store/: mininix-store.cabal
mininix-store/src/: Action.hs  Base32.hs  Builder.hs  Key.hs  Store.hs
mininix-store/src/Builder/: Logging.hs  Parallel.hs
src/: Eval.hs  Expr.hs  FileStore.hs  Object.hs  Parser.hs  Store.hs  Value.hs
