cabal-version:      2.4
name:               mininix
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

executable mininix
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0, bytestring, process, mtl, filepath, directory, aeson, cryptohash-sha256, text, base32, containers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Werror
