cabal-version:      2.4
name:               mininix
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

library
  exposed-modules:
    Action
    Base32
    Eval
    Expr
    Key
    Store
    Value
  build-depends:    
    async, 
    aeson, 
    base >=4.15 && <5, 
    base32, 
    bytestring, 
    containers,
    cryptohash-sha256, 
    directory, 
    filepath, 
    mtl, 
    process, 
    stm,
    text
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications

executable mininix
  main-is:          Main.hs
  build-depends:    
    async,
    base >=4.15 && <5, 
    bytestring,
    containers,
    directory,
    mininix,
    process,
    stm,
    text
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror -threaded
  default-extensions:
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
