cabal-version:      2.4
name:               mininix-buildlang
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

library
  exposed-modules:
    Check
    Eval
    Expr
    Parser
    Syntax
    Type
    Value
  build-depends:    
    base ^>=4.16.3.0,
    bytestring,
    mininix-store,
    text,
    unordered-containers,
    parsers
  hs-source-dirs: 
    src
  default-language: 
    Haskell2010
  default-extensions:
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings

executable mininix
  main-is:          Main.hs
  build-depends:    
    base >=4.15 && <5, 
    mininix-store,
    mininix-buildlang,
    trifecta
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror -threaded
  default-extensions:
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings