cabal-version:      2.4
name:               mininix-store
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

library
  exposed-modules:
    Action
    Base32
    Builder
    Builder.Logging
    Builder.Parallel
    Key
    Store
  build-depends:    
    aeson, 
    base >=4.15 && <5, 
    base32, 
    bytestring, 
    containers,
    cryptohash-sha256, 
    directory, 
    filepath, 
    monad-loops,
    mtl, 
    parsers,
    process, 
    stm,
    text,
    unordered-containers
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
